# BIPVoptimizer

./: .replit  BIPV_Documentation.md  BIPV_MATHEMATICAL_EQUATIONS_REFERENCE.md  DATABASE_ARCHITECTURE_VERIFICATION.md  DATABASE_SCHEMA_FIX.md  DATA_FLOW_REPAIR_SUMMARY.md  DUPLICATE_LOGGING_RESOLUTION.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  SOLUTION_ANALYSIS.md  STEP10_COMPREHENSIVE_DASHBOARD_EXECUTION_FLOW.md  STEP11_AI_CONSULTATION_EXECUTION_FLOW.md  STEP2_DATABASE_REVISION_SUMMARY.md  STEP5_CALCULATION_BREAKDOWN.md  STEP5_EXECUTION_FLOW_EXPLANATION.md  STEP5_PERFORMANCE_ANALYSIS_REPORT.md  STEP5_PERFORMANCE_OPTIMIZATION_SUMMARY.md  STEP5_RADIATION_ANALYSIS_TECHNICAL_SPECS.md  STEP6_ENTERPRISE_FIX_SUMMARY.md  STEP6_PV_SPECIFICATION_EXECUTION_FLOW.md  STEP7_OPTIMIZATION_SUMMARY.md  STEP7_YIELD_VS_DEMAND_EXECUTION_FLOW.md  STEP8_MULTI_OBJECTIVE_OPTIMIZATION_EXECUTION_FLOW.md  STEP9_FINANCIAL_ANALYSIS_EXECUTION_FLOW.md  Step_1_Documentation.md  TMY_DATABASE_REVISION_ANALYSIS.md  TMY_DECIMAL_ERROR_RESOLUTION.md  TMY_SOLAR_POSITION_IMPROVEMENTS.md  WHERE_TO_FIND_SUCCESS_MESSAGES.md  WORKFLOW_INTEGRITY_REPORT.md  app.py  app_backup.py  app_broken.py  app_complete.py  app_dependency_fixed.py  app_fixed.py  app_minimal.py  app_minimal_test.py  app_old.py  app_pure_python.py  (+35 more)
.streamlit/: config.toml
attached_assets/: BIPV_Comprehensive_Analysis_Report_20250704_180431_1751652409682.html  BIPV_Comprehensive_Analysis_Report_20250704_180431_1751654016209.html  BIPV_Comprehensive_Analysis_Report_20250704_180431_1751655345089.html  BIPV_Comprehensive_Analysis_Report_20250823_131251_1755955021392.html  BIPV_Detailed_Scientific_Report_20250627_085717_1751019763696.html  BIPV_Detailed_Scientific_Report_20250627_113508_1751024241699.html  BIPV_Detailed_Scientific_Report_20250703_121410_1751545003826.html  BIPV_Financial_Analysis_20250905_185140_1757098432343.csv  BIPV_Monthly_Energy_Balance_20250718_081715_1752826896697.csv  BIPV_Optimized_Windows_20250803_191125_1754248711884.csv  (+83 more)
components/: __init__.py  (+1 more)
core/: __init__.py  (+2 more)
(+125 files in other folders)
