[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "abqpy>=2025.8",
    "deap>=1.4.3",
    "django-reporting>=0.21",
    "folium>=0.20.0",
    "numpy==1.24.4",
    "openpyxl>=3.1.5",
    "pandas==2.0.3",
    "plotly>=6.1.2",
    "pvlib>=0.13.0",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.46.0",
    "trafilatura>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "beautifulsoup4>=4.13.4",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pydantic>=2.11.7",
    "pandera>=0.25.0",
    "asyncpg>=0.30.0",
    "loguru>=0.7.3",
    "streamlit-extras>=0.7.5",
    "great-expectations>=0.18.22",
    "sentry-sdk>=2.33.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "pydantic-settings>=2.10.1",
    "dask>=2025.7.0",
    "reportlab>=4.4.3",
    "python-docx>=1.2.0",
    "kaleido>=1.0.0",
]
